<resources>
    <string name="app_name">ShopApp</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="new_user_sign_up_here">New user? Sign up here</string>
    <string name="johndoe_email_com">johndoe@email.com</string>
    <string name="todo">TODO</string>
    <string name="new_user">New user?</string>
    <string name="sign_up">Sign up</string>
    <string name="here">here</string>
    <string name="try_again">Try Again</string>
    <string name="incorrect_request">Incorrect Request</string>
    <string name="empty_fields">Empty Fields</string>
    <string name="please_fill_all_fields">Please Fill All Fields</string>
    <string name="please_check">Please Check</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="sign_in">Sign In</string>
    <string name="security_code">Security Code</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="add_location">Add Location</string>
    <string name="complete_profile">Complete Profile</string>
</resources>