<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activitis.SignUpRegisterActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/todo"
        android:src="@mipmap/ic_launcher_foreground" />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="37dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="37dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textColorHint="@color/colorText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailEditTextID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:text=""
                    android:textColor="@color/colorText"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textColorHint="@color/colorText">

                <com.google.android.material.textfield.TextInputEditText

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Full Name"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:text=""
                    android:textColor="@color/colorText"

                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textColorHint="@color/colorText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/PasswordEditTextId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:text=""
                    android:textColor="@color/colorText"

                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textColorHint="@color/colorText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/RepeatPasswordEditTextId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Repeat Password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:text=""
                    android:textColor="@color/colorText"

                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/singInButtonID"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:layout_gravity="center"
                android:layout_marginTop="60dp"
                android:background="@drawable/button_bacground"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />


        </LinearLayout>

        <TextView
            android:id="@+id/signInTextViewID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginTop="46dp"
            android:layout_marginBottom="20dp"
            android:text=""
            android:textColor="@color/colorText"
            android:textSize="17sp" />
    </FrameLayout>

</LinearLayout>